--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,10 @@
-astroid==2.3.3
-atomicwrites==1.3.0
-attrs==19.3.0
-Automat==0.8.0
-beautifulsoup4==4.8.2
-bleach==3.1.0
-branca==0.3.1
-bs4==0.0.1
-certifi==2019.9.11
-cffi==1.13.2
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-constantly==15.1.0
-coverage==5.0.4
-crypto==1.4.1
-cryptography==2.8
-cycler==0.10.0
-dash==1.9.1
-dash-core-components==1.8.1
-dash-html-components==1.0.2
-dash-renderer==1.2.4
-dash-table==4.6.1
-decorator==4.4.1
-docutils==0.15.2
-Flask==1.1.1
-Flask-Compress==1.4.0
-folium==0.10.1
-future==0.18.2
-geocoder==1.38.1
-geographiclib==1.50
-geopy==1.21.0
-grid==0.7.1
-gunicorn==20.0.4
-hyperlink==19.0.0
-idna==2.8
-incremental==17.5.0
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.11.1
-joblib==0.14.0
-keyring==20.0.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.3
-MarkupSafe==1.1.1
-matplotlib==3.1.2
-mccabe==0.6.1
-mod==0.2.4
-more-itertools==8.2.0
-mpu==0.20.0
-Naked==0.1.31
-numpy==1.17.4
-oauthlib==3.1.0
-opencage==1.2
-packaging==20.3
-pandas==0.25.3
-Pillow==7.0.0
-pkginfo==1.5.0.1
-plotly==4.5.4
-pluggy==0.13.1
-py==1.8.1
-pycparser==2.19
-pygame==1.9.6
-Pygments==2.5.2
-PyHamcrest==1.9.0
-pylint==2.4.4
-pyparsing==2.4.5
-PySocks==1.7.1
-pytest==5.4.1
-python-dateutil==2.8.1
-python-telegram-bot==12.2.0
-pytz==2019.3
-pywin32-ctypes==0.2.0
-PyYAML==5.3.1
-ratelim==0.1.6
-readme-renderer==24.0
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-retrying==1.3.3
-scipy==1.3.2
-shellescape==3.8.1
-six==1.13.0
-soupsieve==1.9.5
-telebot==0.0.3
-tornado==6.0.3
-tqdm==4.40.2
-tweepy==3.8.0
-twine==3.1.1
-twitter==1.18.0
-urllib3==1.25.7
-wcwidth==0.1.8
-webencodings==0.5.1
-Werkzeug==1.0.0
-wrapt==1.11.2
-zope.interface==4.7.1
+dash
+dash-html-components
+dash-core-components
+dash-table
+flask
+geopy
+plotly
+requests
+pandas
+werkzeug
